--- a/requirements.txt
+++ b/requirements.txt
@@ -103,3 +103,8 @@ watchfiles==1.1.0
 websocket-client==1.8.0
 websockets==15.0.1
 zipp==3.23.0
+streamlit
+chromadb
+pymupdf
+sentence-transformers
+accelerate
